// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionsActions.changeSelections Set selection change 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "nothingToSelect": false,
    "selections": Array [
      Object {
        "occurrence": 1,
        "occurrences": 1,
        "text": "apostle",
      },
    ],
    "type": "CHANGE_SELECTIONS",
    "username": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "invalidated": false,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀποστόλων",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [
      Object {
        "occurrence": 1,
        "occurrences": 1,
        "text": "apostle",
      },
    ],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": false,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀποστόλων",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.changeSelections Set selection change on different contextId 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "authority",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
    },
    "nothingToSelect": false,
    "selections": Array [
      Object {
        "occurrence": 1,
        "occurrences": 1,
        "text": "apostle",
      },
    ],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": false,
    "contextId": Object {
      "groupId": "authority",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.validateAllSelectionsForVerse all selections edited 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "nothingToSelect": false,
    "selections": Array [],
    "type": "CHANGE_SELECTIONS",
    "username": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.validateAllSelectionsForVerse apostle selection edited 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "nothingToSelect": false,
    "selections": Array [],
    "type": "CHANGE_SELECTIONS",
    "username": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.validateSelections Active Tool TW "servant of God" selection with footnote and edited 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "cancelText": null,
    "confirmText": null,
    "id": "selections_invalidated",
    "ignoreText": null,
    "message": "tools.selections_invalidated",
    "onCancel": null,
    "onConfirm": null,
    "type": "OPEN_ALERT",
  },
]
`;

exports[`SelectionsActions.validateSelections Active Tool TW "servant of God" selection with footnote not edited 1`] = `Array []`;

exports[`SelectionsActions.validateSelections Active Tool TW all selections edited 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "cancelText": null,
    "confirmText": null,
    "id": "selections_invalidated",
    "ignoreText": null,
    "message": "tools.selections_invalidated",
    "onCancel": null,
    "onConfirm": null,
    "type": "OPEN_ALERT",
  },
]
`;

exports[`SelectionsActions.validateSelections Active Tool TW all selections edited current context 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "cancelText": null,
    "confirmText": null,
    "id": "selections_invalidated",
    "ignoreText": null,
    "message": "tools.selections_invalidated",
    "onCancel": null,
    "onConfirm": null,
    "type": "OPEN_ALERT",
  },
]
`;

exports[`SelectionsActions.validateSelections Active Tool TW all selections edited from different verse context - no warning 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
]
`;

exports[`SelectionsActions.validateSelections Active Tool TW all selections edited from different verse context 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "cancelText": null,
    "confirmText": null,
    "id": "selections_invalidated",
    "ignoreText": null,
    "message": "tools.selections_invalidated",
    "onCancel": null,
    "onConfirm": null,
    "type": "OPEN_ALERT",
  },
]
`;

exports[`SelectionsActions.validateSelections Active Tool TW apostle selection edited 1`] = `Array []`;

exports[`SelectionsActions.validateSelections Active Tool TW god selection edited in different context 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "cancelText": null,
    "confirmText": null,
    "id": "selections_invalidated",
    "ignoreText": null,
    "message": "tools.selections_invalidated",
    "onCancel": null,
    "onConfirm": null,
    "type": "OPEN_ALERT",
  },
]
`;

exports[`SelectionsActions.validateSelections Active Tool WA apostle selection edited 1`] = `
Array [
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "nothingToSelect": false,
    "selections": Array [],
    "type": "CHANGE_SELECTIONS",
    "username": "dummy-test",
  },
  Object {
    "gatewayLanguageCode": "en",
    "gatewayLanguageQuote": "authority",
    "invalidated": true,
    "type": "SET_INVALIDATED",
    "userName": "dummy-test",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀποστόλων",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀποστόλων",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "cancelText": null,
    "confirmText": null,
    "id": "selections_invalidated",
    "ignoreText": null,
    "message": "tools.selections_invalidated",
    "onCancel": null,
    "onConfirm": null,
    "type": "OPEN_ALERT",
  },
]
`;
